update CSS styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,11 @@ section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* header */
 .header {
   font-weight: 500;
@@ -64,7 +69,6 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 106px;
   border-bottom: 1px solid #ececec;
 }
 .header-nav {
@@ -87,7 +91,7 @@ section {
   align-items: center;
 } */
 /* logo */
-.logo {
+.logo, .logo-footer{
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 26px;
@@ -136,10 +140,7 @@ section {
   color: var(--primary-white-color);
   background-color: var(--background-color);
 }
-.hero-container {
-  padding-bottom: 200px;
-  margin-bottom: 44px;
-}
+
 
 .hero-name {
   font-weight: 900;
@@ -149,7 +150,6 @@ section {
   text-transform: uppercase;
   max-width: 696px;
   text-align: center;
-  padding-top: 200px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
@@ -189,14 +189,12 @@ section {
   clip-path: inset(50%);
   margin: -1px;
 }
-.advantages-container {
-  margin-bottom: 44px;
-}
+
 .advantages-list {
   display: flex;
   justify-content: space-between;
   gap: 30px;
-  flex-basis: (100%-90px)/4;
+  flex-basis: auto;
 }
 .advantage {
   font-weight: 700;
@@ -218,9 +216,8 @@ section {
 
 .tasks-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 30px;
-  margin-bottom: 44px;
 }
 .tasks {
   font-weight: 700;
@@ -236,7 +233,6 @@ section {
 .our-team {
   background-color: var(--secondary-background-color);
   text-align: center;
-  margin-bottom: 44px;
 }
 .team-list {
   display: flex;
@@ -249,9 +245,14 @@ section {
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  margin-bottom: 50px;
 }
 .team-item {
   background-color: var(--primary-white-color);
+  padding-bottom: 30px;
+}
+.photo {
+  margin-bottom: 30px;
 }
 .team-member {
   font-weight: 500;
@@ -259,6 +260,7 @@ section {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  margin-bottom: 10px;
 }
 .member-speciality {
   font-weight: 400;
@@ -274,6 +276,9 @@ section {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.logo-footer {
+  margin-bottom: 20px;
+}
 .logo-part-footer {
   color: var(--primary-white-color);
 }
@@ -287,13 +292,14 @@ section {
 }
 .address-link {
   color: var(--primary-white-color);
+  text-decoration: none;
+  margin-bottom: 9px;
 }
 .contact-link {
   color: var(--secondary-text-color);
+  margin-bottom: 9px;
 }
-.address-link {
-  text-decoration: none;
-}
+
 .address-list .address-link:hover,
 .address-list .address-link:focus {
   color: var(--accent-color);
@@ -315,13 +321,14 @@ section {
 
 .filter-button {
   font-weight: 500;
-  font-style: 16px;
+  font-size: 16px;
   line-height: 1.625;
   letter-spacing: 0.03em;
   background-color: var(--secondary-background-color);
   color: var(--title-text-color);
   border-radius: 4px;
   border-color: transparent;
+  padding: 6px 22px;
 }
 .filter-list .filter-button:hover,
 .filter-list .filter-button:focus {
@@ -337,16 +344,21 @@ section {
   display: flex;
   justify-content: center;
   gap: 30px;
-  flex-basis: (100%-60px)/3;
+  flex-basis: ((100%-60px)/3);
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
+.project-item {
+  border-bottom: 1px solid #eeeeee;
+}
 .project {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+  margin-bottom: 4px;
 }
 .project-desc {
   font-size: 16px;
