--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --secondary-background-color: #f5f4fa;
   --button-color: #188ce8;
   --logo-color: #000000;
+  /* --card-set-gap: 30px; */
 }
 
 body {
@@ -63,13 +64,14 @@ img {
   font-weight: 500;
   line-height: 1.17;
   letter-spacing: 0.02em;
+  border-bottom: 1px solid #ececec;
   
 }
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #ececec;
+  
 }
 .header-nav {
   display: flex;
@@ -79,10 +81,11 @@ img {
 .header-menu {
   display: flex;
   gap: 50px;
-  margin-left: 93px;
+  margin-left: 65px;
 }
 .auth-menu {
   display: flex;
+  align-items: center;
   gap: 50px;
 }
 /* .nav-container {
@@ -95,10 +98,11 @@ img {
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.7;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-color);
   text-decoration: none;
+  padding: 24px 0;
 }
 .logo-part {
   color: var(--logo-color);
@@ -108,6 +112,7 @@ img {
 /* site nav */
 .site-nav .link {
   color: var(--title-text-color);
+  padding: 32px 0;
 }
 .link {
   text-decoration: none;
@@ -126,6 +131,7 @@ img {
 /* auth nav */
 .auth-nav .contact-link {
   color: var(--title-text-color);
+  padding: 32px 0;
 }
 .contact-link {
   text-decoration: none;
@@ -155,7 +161,11 @@ img {
   margin-bottom: 30px;
 }
 .hero-button {
-  display: block;
+  width: 200px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -213,7 +223,9 @@ img {
 }
 
 /* tasks */
-
+.tasks-section {
+  padding-top: 0;
+}
 .tasks-list {
   display: flex;
   justify-content: center;
@@ -250,9 +262,11 @@ img {
 .team-item {
   background-color: var(--primary-white-color);
   padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
-.photo {
-  margin-bottom: 30px;
+.block {
+  padding: 30px 30px;
 }
 .team-member {
   font-weight: 500;
@@ -276,9 +290,7 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.logo-footer {
-  margin-bottom: 20px;
-}
+
 .logo-part-footer {
   color: var(--primary-white-color);
 }
@@ -289,6 +301,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-top: 20px;
 }
 .address-link {
   color: var(--primary-white-color);
@@ -297,6 +310,9 @@ img {
 }
 .contact-link {
   color: var(--secondary-text-color);
+  margin-bottom: 9px;
+}
+.address-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -316,12 +332,13 @@ img {
   display: flex;
   justify-content: center;
   gap: 30px;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 
 .filter-button {
   font-weight: 500;
   font-size: 16px;
+  font-family: inherit;
   line-height: 1.625;
   letter-spacing: 0.03em;
   background-color: var(--secondary-background-color);
@@ -340,17 +357,30 @@ img {
 }
 /* projects */
 
-.projects-list {
+/* .projects-list {
   display: flex;
   justify-content: center;
   gap: 30px;
-  flex-basis: ((100%-60px)/3);
+  flex-basis: calc((100% - 60px) / 3);
   flex-wrap: wrap;
-  margin-bottom: 20px;
+} */
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
 }
 
 .project-item {
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc(100% / 3 - 60px);
   border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+}
+.block-project {
+  padding: 20px 24px;
 }
 .project {
   font-weight: 700;
