--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ img {
 
 /* hero */
 .hero {
+  padding: 200px 0;
   color: var(--primary-white-color);
   background-color: var(--background-color);
 }
@@ -162,7 +163,7 @@ img {
 }
 .hero-button {
   width: 200px;
-  height: 60px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -177,6 +178,7 @@ img {
   color: var(--primary-white-color);
   margin: 0 auto;
   text-align: center;
+  border: none;
 }
 
 .hero-button:hover,
@@ -261,7 +263,6 @@ img {
 }
 .team-item {
   background-color: var(--primary-white-color);
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -331,7 +332,7 @@ img {
 .filter-list {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 8px;
   margin-bottom: 50px;
 }
 
