--- a/css/styles.css
+++ b/css/styles.css
@@ -65,13 +65,11 @@ img {
   line-height: 1.17;
   letter-spacing: 0.02em;
   border-bottom: 1px solid #ececec;
-  
 }
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 .header-nav {
   display: flex;
@@ -94,7 +92,8 @@ img {
   align-items: center;
 } */
 /* logo */
-.logo, .logo-footer{
+.logo,
+.logo-footer {
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 26px;
@@ -141,13 +140,20 @@ img {
   color: var(--accent-color);
 }
 
-/* hero */
 .hero {
-  padding: 200px 0;
   color: var(--primary-white-color);
   background-color: var(--background-color);
 }
-
+.overlay {
+  padding: 200px 0;
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url(../images/heroimage.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .hero-name {
   font-weight: 900;
@@ -206,7 +212,25 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 30px;
-  flex-basis: auto;
+}
+.advantage-item {
+  flex-basis: calc((100% - 90px) / 4);
+}
+
+.icon-container {
+  width: 270px;
+  height: 120px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondary-background-color);
+}
+
+.advantage-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .advantage {
   font-weight: 700;
@@ -263,8 +287,9 @@ img {
 }
 .team-item {
   background-color: var(--primary-white-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .block {
   padding: 30px 30px;
@@ -282,6 +307,73 @@ img {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-bottom: 16px;
+}
+.net-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+/* .net-item {
+} */
+
+.net-link {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary-white-color);
+  border-radius: 50%;
+  fill: var(--primary-text-color);
+}
+
+.net-link:hover {
+  background-color: var(--accent-color);
+}
+.net-link:hover .net-icon {
+  fill: #ffffff;
+}
+
+/* our clients */
+
+.clients {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+  gap: 30px;
+}
+
+.clients-item {
+  width: calc((100% - 150px) / 6);
+}
+
+.clients-link {
+  width: 100%;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  fill: var(--primary-text-color);
+}
+
+.clients-link:hover {
+  border: 1px solid var(--accent-color);
+}
+
+.clients-link:hover .clients-icon {
+  fill: var(--accent-color);
 }
 
 /* footer */
