--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ img {
 }
 .contact-link {
   display: flex;
-    align-items: center;
+  align-items: center;
   margin-right: 10px;
 }
 .auth-nav-icon {
@@ -157,20 +157,24 @@ img {
   fill: var(--accent-color);
 }
 
-
 .hero {
-  color: var(--primary-white-color);
-  /* background-color: var(--background-color); */
-}
-.overlay {
-  padding: 200px 0;
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url(../images/heroimage.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url('../images/heroimage.jpg');
+
   background-repeat: no-repeat;
   background-size: cover;
+  color: var(--primary-white-color);
+}
+.overlay {
+  padding: 200px 0;
 }
 
 .hero-name {
@@ -500,11 +504,11 @@ img {
 .filter-list .filter-button:hover,
 .filter-list .filter-button:focus {
   background-color: var(--accent-color);
-}
-.filter-list .filter-button:hover,
-.filter-list .filter-button:focus {
   color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 /* projects */
 
 /* .projects-list {
@@ -529,6 +533,12 @@ img {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
 }
+
+.project-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .block-project {
   padding: 20px 24px;
 }
